--- a/src/content/blog/microsoft-fabric-review.mdx
+++ b/src/content/blog/microsoft-fabric-review.mdx
@@ -1,5 +1,5 @@
 ---
-title: Microsoft Fabric: A Game Changer?
+title: "Microsoft Fabric: A Game Changer?"
 description: Exploring the new data analytics platform from Microsoft.
 date: '2023-11-15'
 tags: ['Microsoft Fabric', 'Data Analytics']
