--- a/src/content/projects/powerbi-fabric.mdx
+++ b/src/content/projects/powerbi-fabric.mdx
@@ -1,10 +1,148 @@
 ---
 title: Power BI Real-Time Analytics with Fabric
-description: Real-time dashboarding solution leveraging Microsoft Fabric for data ingestion and Power BI for visualization.
+description: Building real-time analytics pipelines using Microsoft Fabric, Eventstreams, KQL Databases, and Power BI.
 date: '2023-01-01'
-tags: ['Power BI', 'Microsoft Fabric', 'Real-Time']
+tags: ['Power BI', 'Microsoft Fabric', 'Real-Time', 'Data Engineering', 'KQL']
 ---
 
 # Power BI Real-Time Analytics with Fabric
 
-Content coming soon...
+Real-time analytics has become a critical requirement for modern organizations that rely on up-to-date insights to make operational decisions.  
+With the arrival of **Microsoft Fabric**, the entire process of ingesting, processing, storing, and visualizing real-time data has been unified into a single, end-to-end platform.
+
+In this project, I built a real-time analytics solution that uses **Fabric Eventstreams**, **KQL Databases**, and **Power BI Streaming Visuals** to deliver dashboards that update in seconds.
+
+---
+
+## ⚡ Understanding Real-Time Analytics in Fabric
+
+Microsoft Fabric introduces a powerful real-time architecture that removes the need for complex Azure setups such as Event Hub → Stream Analytics → ADX → Power BI.
+
+Fabric centralizes everything:
+
+- Ingestion  
+- Processing  
+- Storage  
+- Visualization  
+
+The core components involved are:
+
+### 🔹 **Eventstreams**
+A fully managed real-time ingestion service.  
+It captures data from:
+- APIs  
+- Message queues  
+- Databases  
+- IoT devices  
+- Any streaming producer  
+
+Eventstreams can then route data to multiple destinations simultaneously.
+
+### 🔹 **KQL Database**
+Fabric provides KQL databases for real-time analytics at scale.  
+They support:
+- High ingestion rate  
+- Fast queries  
+- Log analytics  
+- Time-series exploration  
+
+### 🔹 **Power BI (Fabric-native)**
+Power BI visuals can now connect directly to:
+- Eventstream outputs  
+- KQL database  
+- Lakehouse tables  
+- Real-time semantic models  
+
+This eliminates the traditional latency between ingestion and dashboard refresh.
+
+---
+
+## 🏗 Architecture of the Solution
+
+Below is the high-level flow of the real-time pipeline I implemented:
+Data Source → Eventstream → KQL Database → Power BI Dashboards
+
+
+### Step-by-step:
+
+1. **A data producer** (API or simulated feed) pushes JSON messages containing metrics, statuses, or transactional logs.
+2. **Eventstream** receives the data in real time and optionally transforms or routes it.
+3. Data is pushed directly into a **KQL database table**, stored in micro-batches optimized for analytical queries.
+4. Power BI connects to the KQL database and displays visuals that refresh automatically without manual intervention.
+
+---
+
+## 🛠 Tools & Technologies
+
+- **Microsoft Fabric**
+  - Eventstreams  
+  - KQL Database  
+  - Real-Time Hub  
+  - Workspaces & Items  
+- **Kusto Query Language (KQL)**  
+- **Power BI (Direct Lake / Direct KQL)**  
+- **Python** (optional for testing ingestion)  
+- **JSON Schemas**  
+- **Semantic Models**  
+
+---
+
+## 📊 Real-Time Dashboards in Power BI
+
+Once the KQL database is populated, building dashboards becomes straightforward.
+
+I created visuals to monitor:
+- Live events  
+- Transaction throughput  
+- Status changes  
+- Recent anomalies  
+- Time-series evolutions at second-level granularity  
+
+Using **Direct Query to KQL** ensures that:
+- Data is never cached  
+- Visuals update almost instantly  
+- No scheduled refresh is required  
+
+This gives a true real-time experience.
+
+---
+
+## 🧠 Key Learnings
+
+This project highlighted the strengths of Fabric for real-time analytics:
+
+### ✔ **Unified Architecture**
+All layers — ingestion, processing, storage, visualization — exist inside Fabric.
+
+### ✔ **Low-Latency Dashboards**
+Dashboards can update in seconds, ideal for monitoring systems.
+
+### ✔ **Extreme Simplicity**
+Compared to Azure Event Hub + Stream Analytics + ADX + Power BI, Fabric dramatically reduces:
+- Complexity  
+- Infrastructure cost  
+- Operational overhead  
+
+### ✔ **Scalable Storage via OneLake**
+Data flows naturally into the organization-wide lakehouse.
+
+### ✔ **Ease of Governance**
+All items share Fabric’s unified permissions and lineage.
+
+---
+
+## 🏁 Conclusion
+
+Building real-time dashboards with **Microsoft Fabric + Power BI** is a game changer for modern analytics teams.  
+It allows organizations to respond faster, track critical metrics instantly, and simplify data architecture.
+
+This project demonstrates the potential of Fabric to replace multi-service Azure architectures with a clean, unified experience.
+
+As Fabric evolves, I plan to extend this project by:
+- Adding anomaly detection  
+- Implementing geospatial real-time analytics  
+- Integrating Machine Learning for predictive monitoring  
+
+Real-time insights are now easier than ever — and Fabric makes them accessible to every team.
+
+
