feat: Add new blog content and data, implement UI modernizations and rebranding, and refine layout with a fixed sidebar.

--- a/src/content/blog/getting-started-mlops.mdx
+++ b/src/content/blog/getting-started-mlops.mdx
@@ -1,7 +1,7 @@
 ---
 title: Getting Started with MLOps
 description: An introduction to Machine Learning Operations, its importance, and how to build scalable ML systems.
-date: '2023-10-01'
+date: '2025-10-01'
 tags: ['MLOps', 'Data Engineering', 'DevOps', 'Machine Learning']
 ---
 
@@ -17,7 +17,7 @@ As organizations build more AI-driven applications, MLOps has become a critical 
 
 MLOps addresses several challenges that arise when moving a model from a notebook to production:
 
-### 🔁 **Reproducibility**
+### **Reproducibility**
 Ensuring that a model can be reproduced at any time using the same:
 - Data  
 - Code  
@@ -26,7 +26,7 @@ Ensuring that a model can be reproduced at any time using the same:
 
 This allows teams to track exactly *how* a model was created.
 
-### 🚀 **Scalability**
+### **Scalability**
 Enterprises often manage:
 - Hundreds of feature pipelines  
 - Many versions of the same model  
@@ -34,7 +34,7 @@ Enterprises often manage:
 
 MLOps provides structure for scaling all these components.
 
-### ⚙️ **Automation**
+### **Automation**
 Training and deployment pipelines should not rely on manual processes.  
 Automation enables:
 - Faster iteration  
