feat: Add AuthorProfile and HeroSection components, and a new blog post about Microsoft Fabric.

--- a/src/content/blog/microsoft-fabric-review.mdx
+++ b/src/content/blog/microsoft-fabric-review.mdx
@@ -106,8 +106,7 @@ It's not perfect yet (the platform is steadily evolving), but its vision is stro
 
 ## Conclusion
 
-Microsoft Fabric is more than just a new tool —  
-it’s a **complete rethinking of the modern analytics stack**.
+Microsoft Fabric is more than just a new tool, it’s a **complete rethinking of the modern analytics stack**.
 
 By combining engineering, warehousing, real-time analytics, ML, and BI into a unified system, Fabric dramatically reduces complexity and accelerates the path from raw data to insights.
 
